# very-large-graph

./: .gitattributes  .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md
cmake/: FindIGRAPH.cmake
graphs/: dirty.txt  email-Eu-core.clean.txt  email-Eu-core.txt  test.clean.txt  test.txt
src/: CMakeLists.txt  benchmark.c  benchmark.h  color.c  color.h  communities.c  communities.h  display.c  display.h  extract.c  main.c  matrix.c  matrix.h  options.c  options.h  quotient.c  quotient.h  stopwatch.c  stopwatch.h  sweep.c  sweep.h  vector.c  vector.h
